--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
     "aos": "^2.3.4",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.477.0",
     "next": "^15.2.4",
     "nodemailer": "^6.10.0",
+    "postcss": "^8.5.3",
     "rate-limiter-flexible": "^6.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sharp": "^0.33.5",
     "tailwind-merge": "^3.0.2",
+    "tailwindcss": "^4.1.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
   },
@@ -35,7 +38,6 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
-    "tailwindcss": "^4.0.10",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.2"
   }
